# fizzbuzzx

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  aws_function.py  fizzbuzz.py  fizzbuzzx.py  fizzbuzzx_api.py  lambda-create.sh  pyproject.toml  setup.cfg  setup.py  test_fizzbuzz.py  test_fizzbuzzx.py  tox.ini
.github/: codecov.yml
.github/workflows/: tox_tests.yml
docs/: aws_function.rst  conf.py  fizzbuzzx.rst  fizzbuzzx_api.rst  index.rst  test_fizzbuzzx.rst
presentation/: fizzbuzzx_slides.ipynb
website/: fizzbuzzx.html
