[build-system]
requires = ["setuptools >= 42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true

[tool.pytest.ini_options]
addopts = '--verbosity=2 --doctest-modules --ignore=docs --cov-report=term --cov fizzbuzzx'

[tool.setuptools_scm]
