# For setuptools configuration see https://setuptools.readthedocs.io.
[metadata]
name = fizzbuzzx
version = 0.1.0
author = pelmini
author-email = vivianbai77@gmail.com
description  = fizzbuzz on crack
description-content-type = text/plain
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options.entry_points]
console_scripts =
    fizzbuzz = fizzbuzzx:fizzbuzzx_cli


[options]
include_package_data = True
install_requires =
    fastapi
py_modules =
    fizzbuzzx
requires-python = >=3.6
